criação de menu com icones

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,8 +18,8 @@
   --fundo-principal: #f5f5f5;
   --texto: #222222;
   --texto-inverso: #ffffff;
-  --destaque: #F25757;
-  --destaque-inverso: #F23030;
+  --destaque: #FF6347;
+  --destaque-inverso: #FF7F50;
   --fundo-card: #ffffff;
 }
 
