--- a/estilos/style.css
+++ b/estilos/style.css
@@ -109,3 +109,37 @@ div#social a {
 div#social a:hover {
   color: var(--destaque-inverso);
 }
+
+section#detalhes {
+  grid-column: 2; 
+}
+
+article {
+  background: var(--fundo-card);
+  padding: 20px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+}
+
+article h2 {
+  color: var(--destaque);
+  margin-bottom: 10px;
+  font-size: 1.3em;
+  text-align: center;
+}
+
+.video-container {
+  position: relative;
+  width: 100%;
+  margin: auto;
+  aspect-ratio: 16/9;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+}
