--- a/estilos/style.css
+++ b/estilos/style.css
@@ -123,9 +123,7 @@ article {
 
 article h2 {
   color: var(--destaque);
-  margin-bottom: 10px;
-  font-size: 1.3em;
-  text-align: center;
+  margin-bottom: 20px;
 }
 
 .video-container {
@@ -177,6 +175,38 @@ article h2 {
   height: 100%;
   background-color: var(--destaque-inverso);
   border-radius: 4px;
+}
+
+#formacao-container {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 20px;
+}
+
+#formacao-container .curso {
+  background-color: var(--fundo-principal);
+  border-radius: 8px;
+  border-left: 5px solid var(--destaque-inverso);
+  padding-left: 15px;
+  transition: border-width 0.5s border-color 0.5s;
+}
+
+#formacao-container .curso:hover {
+  border-left-width: 15px;
+  border-color: var(--destaque);
+  cursor: pointer;
+}
+
+#formacao-container .periodo {
+  font-size: 0.8em;
+  font-weight: bold;
+  color: var(--texto);
+}
+
+#formacao-container .instituição {
+  font-size: 1.1em;
+  font-weight: bold;
+  color: var(--destaque-inverso);
 }
 
 @media screen and (min-width: 768px) {
