--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,6 +27,15 @@
   background-color: transparent;
 }
 
+body.escuro {
+    --fundo-principal: #222222;
+    --texto: #e0e0e0;
+    --texto-inverso: #333333;
+    --destaque: #22ff43;
+    --destaque-inverso: #17a745;
+    --fundo-card: #444444;
+}
+
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.5em;
